# market-data-parser

./: CMakeLists.txt  Makefile  README.md  build.sh
include/: async_logger.hpp  itch_parser.hpp  itch_protocol.hpp  mpmc_queue.hpp  system_utils.hpp
scripts/: tune_performance.sh
src/: async_logger.cpp  benchmark.cpp  demo.cpp  itch_parser.cpp  mpmc_queue.cpp  system_utils.cpp
test/: test_parser.cpp
